--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@ scope = global
 
 ; Add the neccessary keys below.
 
-consumer_key = HERE
-consumer_secret = HERE
-access_token = HERE
-access_token_secret = HERE
+consumer_key = CV4bLktMJv6oiuMgCgsfFtkMX
+consumer_secret = waXYbuQPjkDOKTPkp7jcmq1gechIsuUDWljd4d4MTttBqZBuS6
+access_token = 3171126109-f43C4FnqarzKrA5mFB6cNdRkMKN7I2SMNu5VSaG
+access_token_secret = gogHI7DPcfZFwTNAjNxMt2ZseCSqTTjKm3Vw4mRzO1ojP
