--- a/config.ini
+++ b/config.ini
@@ -5,4 +5,4 @@ scope = global
 consumer_key = HERE
 consumer_secret = HERE
 access_token = HERE
-access_token_secret = HEREEEE
+access_token_secret = HERE
